--- a/Ciência de Dados/Python Dados/aula3.ipynb
+++ b/Ciência de Dados/Python Dados/aula3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ca84d5a4",
    "metadata": {},
    "outputs": [],
@@ -68,16 +68,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "487b3e63",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dias para A ultrapassar B: 63\n"
+     ]
+    }
+   ],
    "source": [
     "bac_a = 4\n",
     "bac_b = 10\n",
+    "i = 0\n",
     "\n",
     "while bac_a <= bac_b:\n",
-    "    "
+    "    i += 1\n",
+    "    bac_a *= 1.03\n",
+    "    bac_b *= 1.015\n",
+    "\n",
+    "print (f\"Dias para A ultrapassar B: {i}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49bdeb68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fact (n):\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    return n * fact (n - 1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7753c520",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loja = {'nomes': ['televisão', 'celular', 'notebook', 'geladeira', 'fogão'],\n",
+    "        'precos': [2000, 1500, 3500, 4000, 1500]}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "00dc21b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chave: nomes\n",
+      "Elementos:\n",
+      "televisão\n",
+      "celular\n",
+      "notebook\n",
+      "geladeira\n",
+      "fogão\n",
+      "Chave: precos\n",
+      "Elementos:\n",
+      "2000\n",
+      "1500\n",
+      "3500\n",
+      "4000\n",
+      "1500\n"
+     ]
+    }
+   ],
+   "source": [
+    "for chave, elementos in loja.items():\n",
+    "  print(f'Chave: {chave}\\nElementos:')\n",
+    "  for dado in elementos:\n",
+    "    print(dado)"
    ]
   }
  ],
@@ -86,18 +166,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.12"
   }
  },
  "nbformat": 4,
