--- a/Ciência de Dados/Python Dados/aula3.ipynb
+++ b/Ciência de Dados/Python Dados/aula3.ipynb
@@ -159,6 +159,104 @@
     "  for dado in elementos:\n",
     "    print(dado)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "153f2733",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3144.222"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list = [2172.54, 3701.35, 3518.09, 3456.61, 3249.38, 2840.82, 3891.45, 3075.26, 2317.64, 3219.08]\n",
+    "total = sum(list)\n",
+    "num = len(list)\n",
+    "media = total / num\n",
+    "media"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ef74096e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "maior = []\n",
+    "for i in list:\n",
+    "    if i > 3000:\n",
+    "        maior.append (i)\n",
+    "\n",
+    "len (maior)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ff7a294e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rh = {'Setor A': [22, 26, 30, 30, 35, 38, 40, 56, 57, 65],\n",
+    " 'Setor B': [22, 24, 26, 33, 41, 49, 50, 54, 60, 64],\n",
+    " 'Setor C': [23, 26, 26, 29, 34, 35, 36, 41, 52, 56],\n",
+    " 'Setor D': [19, 20, 25, 27, 34, 39, 42, 44, 50, 65]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4c72889f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Média do Setor A: \n",
+      "39.9\n",
+      "\n",
+      "Média do Setor B: \n",
+      "42.3\n",
+      "\n",
+      "Média do Setor C: \n",
+      "35.8\n",
+      "\n",
+      "Média do Setor D: \n",
+      "36.5\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for chave, elm in rh.items():\n",
+    "    print (f\"Média do {chave}: \")\n",
+    "    soma = sum(elm)\n",
+    "    num = len(elm)\n",
+    "    media = soma / num\n",
+    "    print (f\"{media}\\n\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -166,6 +264,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
