--- a/Ciência de Dados/Python Dados/aula4.ipynb
+++ b/Ciência de Dados/Python Dados/aula4.ipynb
@@ -145,8 +145,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ce5628bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'1 Trimestre': 8.5, '2° Trimestre': 9.5, '3º trimestre': 7}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Notas do(a) estudante\n",
+    "notas = {'1 Trimestre': 8.5, '2° Trimestre': 9.5, '3º trimestre': 7}\n",
+    "notas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "745be539",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soma = sum(notas.values())\n",
+    "soma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1c0224a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qnt_notas = len(notas)\n",
+    "qnt_notas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1cee5d9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.3"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "media = soma / qnt_notas\n",
+    "round (media, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ddb203ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def media (notas):\n",
+    "    \n",
+    "    calculo = sum (notas) / len (notas)\n",
+    "    return round (calculo, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6f7ae05a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.3"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notas_arthur = [7.5, 8.3, 5.5, 6.1, 9.0]\n",
+    "m_arthur = media (notas_arthur)\n",
+    "m_arthur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "fb021f6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def media(lista: list=[0]) -> float:\n",
+    "  ''' Função para calcular a média de notas passadas por uma lista\n",
+    "\n",
+    "  lista: list, default [0]\n",
+    "    Lista com as notas para calcular a média\n",
+    "  return = calculo: float\n",
+    "    Média calculada\n",
+    "  '''\n",
+    "  calculo = sum(lista) / len(lista)\n",
+    "  return calculo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "29563af6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function media in module __main__:\n",
+      "\n",
+      "media(lista: list = [0]) -> float\n",
+      "    Função para calcular a média de notas passadas por uma lista\n",
+      "\n",
+      "    lista: list, default [0]\n",
+      "      Lista com as notas para calcular a média\n",
+      "    return = calculo: float\n",
+      "      Média calculada\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help (media)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c4b068d",
    "metadata": {},
    "outputs": [],
    "source": []
