--- a/Ciência de Dados/Python Dados/aula4.ipynb
+++ b/Ciência de Dados/Python Dados/aula4.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "fb021f6f",
    "metadata": {},
    "outputs": [],
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "29563af6",
    "metadata": {},
    "outputs": [
@@ -316,8 +316,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3c4b068d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.222222222222222"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista = [5.5, 8.9, 6.7, 7.2, 9.0, 6.3, 7.4, 6.0, 8.0]\n",
+    "media (lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c1119f07",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate list (not \"float\") to list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipython-input-140393558.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mnotas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m5.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m8.9\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6.7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7.2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m9.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6.3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7.4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m8.0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mqualitativa\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mqualitativa\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnotas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipython-input-140393558.py\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mnotas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m5.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m8.9\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6.7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7.2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m9.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6.3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7.4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m8.0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mqualitativa\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mqualitativa\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnotas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate list (not \"float\") to list"
+     ]
+    }
+   ],
+   "source": [
+    "notas = [5.5, 8.9, 6.7, 7.2, 9.0, 6.3, 7.4, 6.0, 8.0]\n",
+    "qualitativa = lambda x: x + 0.5\n",
+    "qualitativa(notas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ef4e0dc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<map at 0x7f34a7a56f20>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notas_atualizadas = map (qualitativa, notas)\n",
+    "notas_atualizadas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "66f240a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6.0, 9.4, 7.2, 7.7, 9.5, 6.8, 7.9, 6.5, 8.5]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notas_atualizadas = list(notas_atualizadas)\n",
+    "notas_atualizadas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "63fbb7ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on map object:\n",
+      "\n",
+      "class map(object)\n",
+      " |  map(func, *iterables) --> map object\n",
+      " |\n",
+      " |  Make an iterator that computes the function using arguments from\n",
+      " |  each of the iterables.  Stops when the shortest iterable is exhausted.\n",
+      " |\n",
+      " |  Methods defined here:\n",
+      " |\n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |\n",
+      " |  __iter__(self, /)\n",
+      " |      Implement iter(self).\n",
+      " |\n",
+      " |  __next__(self, /)\n",
+      " |      Implement next(self).\n",
+      " |\n",
+      " |  __reduce__(...)\n",
+      " |      Return state information for pickling.\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |\n",
+      " |  __new__(*args, **kwargs)\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(map(qualitativa, notas))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "492ad02e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[24, 99]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista = [97, 80, 94, 88, 80, 1, 16, 53, 62, 32, 24, 99]\n",
+    "\n",
+    "def multiplo (lista: list=[0]) -> list:\n",
+    "    lista_atualizada = []\n",
+    "    for num in lista:\n",
+    "        if num % 3 == 0:\n",
+    "            lista_atualizada.append (num)\n",
+    "\n",
+    "    return lista_atualizada\n",
+    "\n",
+    "lista_2 = multiplo (lista)\n",
+    "lista_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c1d8ea21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notas = []\n",
+    "i = 0\n",
+    "for i in range (5):\n",
+    "    nota = int(input(\"Nota: \"))\n",
+    "    notas.append(nota)\n",
+    "\n",
+    "maior = notas[0]\n",
+    "menor = notas[0]\n",
+    "i = 1\n",
+    "for i in range (5):\n",
+    "    if notas[i] > maior:\n",
+    "        maior = notas[i]\n",
+    "    if notas[i] < menor:\n",
+    "        menor = notas[i]\n",
+    "\n",
+    "notas.remove(menor)\n",
+    "notas.remove(maior)\n",
+    "\n",
+    "media (notas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5bae1292",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nome completo: João Silva\n",
+      "Nome completo: Maria Souza\n",
+      "Nome completo: José Tavares\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nomes dos estudantes\n",
+    "nomes = [\"joão\", \"MaRia\", \"JOSÉ\"]\n",
+    "sobrenomes = [\"SILVA\", \"souza\", \"Tavares\"]\n",
+    "\n",
+    "# Função lambda que recebe duas listas e itera em cada uma concatenando seu nome e sobrenome\n",
+    "# na forma desejada\n",
+    "nome_completo = map(lambda nome, sobrenome: f'{nome.title()} {sobrenome.title()}', nomes, sobrenomes)\n",
+    "\n",
+    "# Leitura do objeto mapa(iterável)\n",
+    "for n in nome_completo:\n",
+    "  print(f'Nome completo: {n}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08b66230",
    "metadata": {},
    "outputs": [],
    "source": []
