--- a/Ciência de Dados/Python Dados/aula5.ipynb
+++ b/Ciência de Dados/Python Dados/aula5.ipynb
@@ -342,11 +342,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a2367d9c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "estados = ['SP', 'ES', 'MG', 'MG', 'SP', 'MG', 'ES', 'ES', 'ES', 'SP', 'SP', 'MG', 'ES', 'SP', 'RJ', 'MG', 'RJ', 'SP', 'MG', 'SP', 'ES', 'SP', 'MG']\n",
+    "estados_unicos = list (set (estados))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "22417e11",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['RJ', 'RJ'],\n",
+       " ['MG', 'MG', 'MG', 'MG', 'MG', 'MG', 'MG'],\n",
+       " ['ES', 'ES', 'ES', 'ES', 'ES', 'ES'],\n",
+       " ['SP', 'SP', 'SP', 'SP', 'SP', 'SP', 'SP', 'SP']]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_de_listas = []\n",
+    "for estado in estados_unicos:\n",
+    "    lista = [uf for uf in estados if uf == estado]\n",
+    "    lista_de_listas.append (lista)\n",
+    "\n",
+    "lista_de_listas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2ad2d4ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'RJ': 2, 'MG': 7, 'ES': 6, 'SP': 8}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contagem_valores = {estados_unicos[i]: len (lista_de_listas[i]) for i in range (len (lista_de_listas))}\n",
+    "\n",
+    "contagem_valores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02c252fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "notas = {'João': [8.0, 9.0, 10.0], 'Maria': [9.0, 7.0, 6.0], 'José': [3.4, 7.0, 8.0],'Cláudia': [5.5, 6.6, 8.0], 'Ana': [6.0, 10.0, 9.5], 'Joaquim': [5.5, 7.5, 9.0], 'Júlia': [6.0, 8.0, 7.0], 'Pedro': [3.0, 4.0, 6.0]}\n",
+    "nome = input (\"nome: \")\n",
+    "\n",
+    "result = notas[nome]\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c9d1478c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'KeyError'> Erro: 'Pinto'\n",
+      "Consulta ecerrada!\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    nome = input (\"nome: \")\n",
+    "    result = notas[nome]\n",
+    "except KeyError as ke:\n",
+    "    print(type(ke), f\"Erro: {ke}\")\n",
+    "else:\n",
+    "    print (result)\n",
+    "finally:\n",
+    "    print (\"Consulta ecerrada!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b156946e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def media(lista: list=[0]) -> float:\n",
+    "  ''' Função para calcular a média de notas passadas por uma lista\n",
+    "\n",
+    "  lista: list, default [0]\n",
+    "    Lista com as notas para calcular a média\n",
+    "  return = calculo: float\n",
+    "    Média calculada\n",
+    "  '''\n",
+    "  calculo = sum(lista) / len(lista)\n",
+    "\n",
+    "  if len (lista) > 4:\n",
+    "    raise ValueError (\"A lista não pode ter mais de 4 notas!\")\n",
+    "  \n",
+    "  return calculo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "66bd5be8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lista_soma (lista1, lista2):\n",
+    "    if len (lista1) > len (lista2) or len (lista1) < len (lista2):\n",
+    "        raise ValueError(\"A quantidade de elementos em cada lista é diferente.\")\n",
+    "    \n",
+    "    new_list = []\n",
+    "    for i in range (len(lista1)):\n",
+    "        tupla = (lista1[i], lista2[i], lista1[i] + lista2[i])\n",
+    "        new_list.append (tupla)\n",
+    "\n",
+    "    return new_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a2cfcd2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "letra = 'D'\n",
+    "num_letra = ord(letra)\n",
+    "num_letra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0b74dbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compara_lista (list1, list2):\n",
+    "    if len (list1) > len (list2) or len (list1) < len (list2):\n",
+    "        raise ValueError(\"A quantidade de elementos em cada lista é diferente.\")\n",
+    "    \n",
+    "    resultado = 0\n",
+    "    for i in range (len (list1)):\n",
+    "        if ord (list1[i]) > 68:\n",
+    "            raise ValueError(f\"A alternativa {list1[i]} não é uma opção de alternativa válida\")\n",
+    "        \n",
+    "        if list1[i] == list2[i]:\n",
+    "            resultado += 1\n",
+    "        \n",
+    "    return resultado\n",
+    "        \n",
+    "\n",
+    "def result_notas (lista):\n",
+    "    gabarito = ['D', 'A', 'B', 'C', 'A']\n",
+    "    \n",
+    "    for i in range (len(lista)):\n",
+    "        result = compara_lista (lista[i], gabarito)\n",
+    "\n",
+    "        lista[i] = result\n",
+    "    \n",
+    "    return lista\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
